# xless

./: .gitignore  CURRENT_MEMORY.md  Cargo.toml  FAILED_PATHS.md  LICENSE  Makefile  README.md  agent_xless_memory_20260405T172755Z.md  agent_xless_memory_20260405T173134Z.md  agent_xless_memory_20260405T173452Z.md  agent_xless_memory_20260405T173809Z.md  agent_xless_memory_20260405T174129Z.md  agent_xless_memory_20260405T174512Z.md  agent_xless_memory_20260405T175046Z.md  agent_xless_memory_20260405T175502Z.md  agent_xless_memory_20260405T182459Z.md  agent_xless_memory_20260405T182744Z.md  agent_xless_memory_20260405T183333Z.md  agent_xless_memory_20260405T184458Z.md  agent_xless_memory_20260405T185615Z.md  agent_xless_memory_20260405T190007Z.md  results.tsv
docs/: configuration.md  development.md  shortcuts.md  usage.md
src/: cli.rs  config.rs  document.rs  highlight.rs  lib.rs  main.rs  pager.rs  render.rs  style.rs  terminal.rs
tests/: cli.rs
